--- a/config/database.yml
+++ b/config/database.yml
@@ -15,12 +15,21 @@
 # gem 'pg'
 #
 default: &default
+  # adapter: postgresql
+  # encoding: unicode
+  # # For details on connection pooling, see Rails configuration guide
+  # # https://guides.rubyonrails.org/configuring.html#database-pooling
+  # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  # # host: <%= ENV.fetch('DB_HOST', 'localhost') %>
+  # url: <%= ENV['DATABASE_URL'] %>
+  # # host: db
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
+  # url: <%= ENV['DATABASE_URL'] %>
+  host: <%= ENV.fetch('DB_HOST', 'localhost') %>
+  username: postgres
+  password: password
 
 development:
   <<: *default
